2010-01-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * scripts/plugin_test.c:
   Add a little test program which can load and test Geany plugins to
   verify it is loadable at runtime and all necessary symbols are
   defined.


2010-01-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * src/editor.c:
   Remove editor_auto_latex() from Geany core and move it to geanyLaTeX
   plugin.


2010-01-12  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c, src/templates.c, src/templates.h:
   Refactor templates_replace_all() into templates_replace_valist()
   to save some code duplication.


2010-01-11  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * plugins/geanyfunctions.h, src/editor.c, src/editor.h,
   src/plugindata.h, src/plugins.c:
   Add editor_insert_text_block() to plugin API.


2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * *.*:
   Update copyright information.
 * src/keybindings.c, src/keybindings.h, src/plugindata.h,
   doc/geany.txt, doc/geany.html:
   Add keybinding to open the last closed tab (closes #2912692).


2009-12-31  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * autogen.sh, configure.in, configure.ac:
   Rename configure.in to configure.ac.
 * plugins/geanyfunctions.h, src/plugins.c, src/plugindata.h,
   src/sciwrappers.c:
   Add sci_find_text() to the plugin API.
 * doc/geany.html, doc/geany.txt, geany.glade, src/callbacks.c,
   src/interface.c, src/prefs.c:
   Add a checkbox in the preferences dialog to explicitly toggle
   the visibility of the sidebar (closes #2923340).


2009-12-29  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c, src/plugins.c, src/plugindata.h,
   plugins/geanyfunctions.h:
   Add editor_get_eol_char_name(), editor_get_eol_char_len() and
   editor_get_eol_char() to the plugin API.
 * src/callbacks.c, src/plugins.c, src/plugins.h:
   Fix sensitivity of the Edit->Plugin Preferences menu item