@@ -44,6 +44,7 @@ typedef enum
 	GCB_PROJECT_CLOSE,
 	GCB_UPDATE_EDITOR_MENU,
 	GCB_EDITOR_NOTIFY,
+	GCB_GEANY_STARTUP_COMPLETE,
 	GCB_SAVE_SETTINGS,
 	GCB_LOAD_SETTINGS,
 	GCB_MAX
@@ -88,6 +89,7 @@ struct _GeanyObjectClass
 	void (*project_close)(void);
 	void (*update_editor_menu)(const gchar *word, gint click_pos, GeanyDocument *doc);
 	gboolean (*editor_notify)(GeanyEditor *editor, gpointer scnt);
+	void (*geany_startup_complete)(void);
 	void (*save_settings)(GKeyFile *keyfile);
 	void (*load_settings)(GKeyFile *keyfile);
 };
